tests/baselines/reference/contextualTyping2.errors.txt
tests/cases/compiler/contextualTyping2.ts(1,5): error TS2322: Type '{ id: number; name: string; }' is not assignable to type '{ id: number; }'.
  Property 'name' does not exist on type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping2.ts (1 errors) ====
    var foo: {id:number;} = {id:4, name:"foo"};
        ~~~
!!! error TS2322: Type '{ id: number; name: string; }' is not assignable to type '{ id: number; }'.
!!! error TS2322:   Property 'name' does not exist on type '{ id: number; }'.